--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-13.43MB/s(Youtube:不良林), server: nn2.boom.party, port: 41000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 297930:nKtI1N, obfs-param: www.baidu.com}
-  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: lvuft.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: lvuft.com}}
-  - {name: 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-155.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-4.78MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 154.94.214.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 154.94.214.2}}
-  - {name: 🇺🇸 美国-11.31MB/s(Youtube:不良林), server: jpaz5.xmrth-node.xyz, port: 13870, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz5.xmrth-node.xyz}}
-  - {name: 🇨🇭 瑞士-2.87MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇺🇸 美国-5.89MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇫🇷 法国-2.49MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-182.6KB/s(Youtube:不良林), server: 154.94.214.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 154.94.214.2}}
+  - {name: 🇺🇸 美国-389.9KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
+  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.57MB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-13.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-514.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-155.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.31MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-182.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
