--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-944.0KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-12.07MB/s(Youtube:不良林), server: nn2.boom.party, port: 41000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 297930:nKtI1N, obfs-param: www.baidu.com}
-  - {name: 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-528.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
   - {name: 🇫🇷 法国-1.94MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 波兰-603.1KB/s(Youtube:不良林), server: 217.30.10.64, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-240.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇳🇱 荷兰-257.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇳🇱 荷兰-241.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-215.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 波兰-506.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-944.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-260.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 波兰-528.5KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
+      - 波兰-603.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-257.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-215.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-262.5KB/s(Youtube:不良林)
+      - 波兰-506.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
