--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-506.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 波兰-528.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇳🇱 荷兰-240.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇳🇱 荷兰-205.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇨🇭 瑞士-1.49MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 未知国家-249.8KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇯🇵 日本-863.0KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇭🇰 香港-715.8KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇳🇱 荷兰-212.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-234.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: fce6696a-db15-11ec-92d0-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
+  - {name: 未知国家-303.3KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇭🇰 香港-201.2KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-506.7KB/s(Youtube:不良林)
-      - 波兰-528.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-157.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-240.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-205.5KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-218.4KB/s(Youtube:不良林)
-      - 未知国家-249.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-863.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-715.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-212.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-234.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
+      - 未知国家-303.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-201.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
